# ntut-url

./: .gitignore  .gitmodules  LICENSE  README.md  app.py  package-lock.json  package.json  pyproject.toml  run.py
controller/: create.py  find.py
models/: url.py
ntut_url/: __init__.py  config.py
ntut_url/api/redirect/: process.py
ntut_url/api/setting/: browse.py  create.py
ntut_url/controller/: create.py  create_url.py  find.py  get_url.py
ntut_url/controller/setting/: browse.py  create.py
ntut_url/models/: url.py
ntut_url/pages/: index.html
ntut_url/routes/: api.py  redirect.py  setting.py
ntut_url/static/: index.html
ntut_url/static/css/: layout.css
ntut_url/static/js/: main.js
routes/: api.py  redirect.py  urls.py
services/: redirect.py  urls.py
utils/: generate_name.py
